force-app/main/default/objects/Carousel_Panel__c/Carousel_Panel__c.object-meta.xml
<CustomObject>
    <label>Carousel Panel</label>
    <nameField>
        <label>Carousel Panel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carousel Panels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>