force-app/main/default/objects/Carousel_Panel__c/fields/Carousel_Panel_Image_Src__c.field-meta.xml
<CustomField>
    <fullName>Carousel_Panel_Image_Src__c</fullName>
    <description>URL of what image the panel will display.</description>
    <label>Carousel Panel Image Src</label>
    <required>true</required>
    <type>Url</type>
</CustomField>