force-app/main/default/objects/Carousel_Panel__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>More in depth description of carousel panel</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>