force-app/main/default/objects/Carousel_Panel__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>Describe what the header of the carousel panel will be.</description>
    <label>Header</label>
    <length>180</length>
    <type>Text</type>
</CustomField>