force-app/main/default/objects/Carousel_Panel__c/fields/Inside_Carousel__c.field-meta.xml
<CustomField>
    <fullName>Inside_Carousel__c</fullName>
    <label>Inside Carousel</label>
    <referenceTo>Carousel__c</referenceTo>
    <relationshipLabel>Carouse Panels</relationshipLabel>
    <relationshipName>Carouse_Panels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>