force-app/main/default/objects/Carousel_Panel__c/fields/Is_Active_Panel__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Panel__c</fullName>
    <defaultValue>true</defaultValue>
    <description>By default the panel will always be active, uncheck if preferred to not be active. If not active panel will not display on parent carousel.</description>
    <label>Is Active Panel</label>
    <type>Checkbox</type>
</CustomField>