force-app/main/default/objects/Carousel_Panel__c/fields/Panel_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Panel_Ordering__c</fullName>
    <label>Panel Ordering</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>