force-app/main/default/objects/Carousel_Panel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Carousel_Panel_Image_Src__c</columns>
    <columns>Description__c</columns>
    <columns>Is_Active_Panel__c</columns>
    <columns>Panel_Ordering__c</columns>
    <columns>Inside_Carousel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>